test/expected/declare_o_qmark_colon_k2i_i.out
declare ?: as operator (S, int, int) returning int
        ^
9: error: operator "?:" can not be overloaded
